src/bison/bison.output
Gramática

    0 $accept: S $end

    1 S: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | fun_decl
    6     | error

    7 var_decl: TYPE ID ';'
    8         | TYPE ID error

    9 fun_decl: TYPE ID '(' params ')' block_stmt
   10         | TYPE ID '(' ')' block_stmt

   11 params: params ',' param_decl
   12       | param_decl

   13 param_decl: TYPE ID

   14 statement: exp_stmt
   15          | block_stmt
   16          | if_stmt
   17          | return_stmt
   18          | write_stmt
   19          | writeln_stmt
   20          | read_stmt
   21          | var_decl
   22          | for_stmt

   23 for_stmt: FOR '(' assing_exp ';' rel_exp ';' assing_exp ')' block_stmt

   24 exp_stmt: exp ';'
   25         | ';'

   26 exp: assing_exp
   27    | simple_exp

   28 assing_exp: ID ASSIGN simple_exp

   29 block_stmt: '{' stmt_list '}'

   30 stmt_list: stmt_list statement
   31          | %empty
   32          | stmt_list error

   33 if_stmt: IF '(' rel_exp ')' statement
   34        | IF '(' rel_exp ')' statement ELSE statement

   35 return_stmt: RETURN ';'
   36            | RETURN exp ';'

   37 write_stmt: WRITE '(' simple_exp ')' ';'

   38 writeln_stmt: WRITELN '(' simple_exp ')' ';'

   39 read_stmt: READ '(' ID ')' ';'

   40 simple_exp: bin_exp
   41           | list_exp

   42 list_exp: factor ':' factor
   43         | '?' factor
   44         | '%' factor
   45         | factor MAP factor
   46         | factor FILTER factor

   47 bin_exp: bin_exp LOG_OP unary_log_exp
   48        | unary_log_exp

   49 unary_log_exp: EXCLAMATION unary_log_exp
   50              | rel_exp

   51 rel_exp: rel_exp REL_OP sum_exp
   52        | sum_exp

   53 sum_exp: sum_exp SUM_OP mul_exp
   54        | mul_exp

   55 mul_exp: mul_exp MUL_OP factor
   56        | factor
   57        | SUM_OP factor

   58 factor: immutable
   59       | ID

   60 immutable: '(' simple_exp ')'
   61          | call
   62          | constant

   63 call: ID '(' args ')'
   64     | ID '(' ')'
   65     | ID error

   66 args: args ',' simple_exp
   67     | simple_exp
   68     | error

   69 constant: NIL
   70         | INT
   71         | FLOAT
   72         | STRING


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '%' <token> (37) 44
    '(' <token> (40) 9 10 23 33 34 37 38 39 60 63 64
    ')' <token> (41) 9 10 23 33 34 37 38 39 60 63 64
    ',' <token> (44) 11 66
    ':' <token> (58) 42
    ';' <token> (59) 7 23 24 25 35 36 37 38 39
    '?' <token> (63) 43
    '{' <token> (123) 29
    '}' <token> (125) 29
    error (256) 6 8 32 65 68
    ID <token> (258) 7 8 9 10 13 28 39 59 63 64 65
    INT <token> (259) 70
    FLOAT <token> (260) 71
    NIL <token> (261) 69
    IF <token> (262) 33 34
    ELSE <token> (263) 34
    ASSIGN <token> (264) 28
    FOR <token> (265) 23
    RETURN <token> (266) 35 36
    TYPE <token> (267) 7 8 9 10 13
    WRITE <token> (268) 37
    WRITELN <token> (269) 38
    READ <token> (270) 39
    MUL_OP <token> (271) 55
    SUM_OP <token> (272) 53 57
    REL_OP <token> (273) 51
    EXCLAMATION <token> (274) 49
    LOG_OP <token> (275) 47
    MAP <token> (276) 45
    FILTER <token> (277) 46
    THEN (278)
    STRING <token> (279) 72


Não terminais com as regras onde eles aparecem

    $accept (34)
        à esquerda: 0
    S <node> (35)
        à esquerda: 1
        à direita: 0
    decl_list <node> (36)
        à esquerda: 2 3
        à direita: 1 2
    decl <node> (37)
        à esquerda: 4 5 6
        à direita: 2 3
    var_decl <node> (38)
        à esquerda: 7 8
        à direita: 4 21
    fun_decl <node> (39)
        à esquerda: 9 10
        à direita: 5
    params <node> (40)
        à esquerda: 11 12
        à direita: 9 11
    param_decl <node> (41)
        à esquerda: 13
        à direita: 11 12
    statement <node> (42)
        à esquerda: 14 15 16 17 18 19 20 21 22
        à direita: 30 33 34
    for_stmt <node> (43)
        à esquerda: 23
        à direita: 22
    exp_stmt <node> (44)
        à esquerda: 24 25
        à direita: 14
    exp <node> (45)
        à esquerda: 26 27
        à direita: 24 36
    assing_exp <node> (46)
        à esquerda: 28
        à direita: 23 26
    block_stmt <node> (47)
        à esquerda: 29
        à direita: 9 10 15 23
    stmt_list <node> (48)
        à esquerda: 30 31 32
        à direita: 29 30 32
    if_stmt <node> (49)
        à esquerda: 33 34
        à direita: 16
    return_stmt <node> (50)
        à esquerda: 35 36
        à direita: 17
    write_stmt <node> (51)
        à esquerda: 37
        à direita: 18
    writeln_stmt <node> (52)
        à esquerda: 38
        à direita: 19
    read_stmt <node> (53)
        à esquerda: 39
        à direita: 20
    simple_exp <node> (54)
        à esquerda: 40 41
        à direita: 27 28 37 38 60 66 67
    list_exp <node> (55)
        à esquerda: 42 43 44 45 46
        à direita: 41
    bin_exp <node> (56)
        à esquerda: 47 48
        à direita: 40 47
    unary_log_exp <node> (57)
        à esquerda: 49 50
        à direita: 47 48 49
    rel_exp <node> (58)
        à esquerda: 51 52
        à direita: 23 33 34 50 51
    sum_exp <node> (59)
        à esquerda: 53 54
        à direita: 51 52 53
    mul_exp <node> (60)
        à esquerda: 55 56 57
        à direita: 53 54 55
    factor <node> (61)
        à esquerda: 58 59
        à direita: 42 43 44 45 46 55 56 57
    immutable <node> (62)
        à esquerda: 60 61 62
        à direita: 58
    call <node> (63)
        à esquerda: 63 64 65
        à direita: 61
    args <node> (64)
        à esquerda: 66 67 68
        à direita: 63 66
    constant <node> (65)
        à esquerda: 69 70 71 72
        à direita: 62


Estado 0

    0 $accept: • S $end

    error  deslocar, e ir ao estado 1
    TYPE   deslocar, e ir ao estado 2

    S          ir ao estado 3
    decl_list  ir ao estado 4
    decl       ir ao estado 5
    var_decl   ir ao estado 6
    fun_decl   ir ao estado 7


Estado 1

    6 decl: error •

    $end   reduzir usando a regra 6 (decl)
    error  reduzir usando a regra 6 (decl)
    TYPE   reduzir usando a regra 6 (decl)


Estado 2

    7 var_decl: TYPE • ID ';'
    8         | TYPE • ID error
    9 fun_decl: TYPE • ID '(' params ')' block_stmt
   10         | TYPE • ID '(' ')' block_stmt

    ID  deslocar, e ir ao estado 8


Estado 3

    0 $accept: S • $end

    $end  deslocar, e ir ao estado 9


Estado 4

    1 S: decl_list •
    2 decl_list: decl_list • decl

    error  deslocar, e ir ao estado 1
    TYPE   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 1 (S)

    decl      ir ao estado 10
    var_decl  ir ao estado 6
    fun_decl  ir ao estado 7


Estado 5

    3 decl_list: decl •

    $end   reduzir usando a regra 3 (decl_list)
    error  reduzir usando a regra 3 (decl_list)
    TYPE   reduzir usando a regra 3 (decl_list)


Estado 6

    4 decl: var_decl •

    $end   reduzir usando a regra 4 (decl)
    error  reduzir usando a regra 4 (decl)
    TYPE   reduzir usando a regra 4 (decl)


Estado 7

    5 decl: fun_decl •

    $end   reduzir usando a regra 5 (decl)
    error  reduzir usando a regra 5 (decl)
    TYPE   reduzir usando a regra 5 (decl)


Estado 8

    7 var_decl: TYPE ID • ';'
    8         | TYPE ID • error
    9 fun_decl: TYPE ID • '(' params ')' block_stmt
   10         | TYPE ID • '(' ')' block_stmt

    error  deslocar, e ir ao estado 11
    ';'    deslocar, e ir ao estado 12
    '('    deslocar, e ir ao estado 13


Estado 9

    0 $accept: S $end •

    $padrão  aceitar


Estado 10

    2 decl_list: decl_list decl •

    $end   reduzir usando a regra 2 (decl_list)
    error  reduzir usando a regra 2 (decl_list)
    TYPE   reduzir usando a regra 2 (decl_list)


Estado 11

    8 var_decl: TYPE ID error •

    $end   reduzir usando a regra 8 (var_decl)
    error  reduzir usando a regra 8 (var_decl)
    TYPE   reduzir usando a regra 8 (var_decl)


Estado 12

    7 var_decl: TYPE ID ';' •

    $end   reduzir usando a regra 7 (var_decl)
    error  reduzir usando a regra 7 (var_decl)
    TYPE   reduzir usando a regra 7 (var_decl)


Estado 13

    9 fun_decl: TYPE ID '(' • params ')' block_stmt
   10         | TYPE ID '(' • ')' block_stmt

    TYPE  deslocar, e ir ao estado 14
    ')'   deslocar, e ir ao estado 15

    params      ir ao estado 16
    param_decl  ir ao estado 17


Estado 14

   13 param_decl: TYPE • ID

    ID  deslocar, e ir ao estado 18


Estado 15

   10 fun_decl: TYPE ID '(' ')' • block_stmt

    '{'  deslocar, e ir ao estado 19

    block_stmt  ir ao estado 20


Estado 16

    9 fun_decl: TYPE ID '(' params • ')' block_stmt
   11 params: params • ',' param_decl

    ','  deslocar, e ir ao estado 21
    ')'  deslocar, e ir ao estado 22


Estado 17

   12 params: param_decl •

    ','  reduzir usando a regra 12 (params)
    ')'  reduzir usando a regra 12 (params)


Estado 18

   13 param_decl: TYPE ID •

    ','  reduzir usando a regra 13 (param_decl)
    ')'  reduzir usando a regra 13 (param_decl)


Estado 19

   29 block_stmt: '{' • stmt_list '}'

    error        reduzir usando a regra 31 (stmt_list)
    ID           reduzir usando a regra 31 (stmt_list)
    INT          reduzir usando a regra 31 (stmt_list)
    FLOAT        reduzir usando a regra 31 (stmt_list)
    NIL          reduzir usando a regra 31 (stmt_list)
    IF           reduzir usando a regra 31 (stmt_list)
    FOR          reduzir usando a regra 31 (stmt_list)
    RETURN       reduzir usando a regra 31 (stmt_list)
    TYPE         reduzir usando a regra 31 (stmt_list)
    WRITE        reduzir usando a regra 31 (stmt_list)
    WRITELN      reduzir usando a regra 31 (stmt_list)
    READ         reduzir usando a regra 31 (stmt_list)
    SUM_OP       reduzir usando a regra 31 (stmt_list)
    EXCLAMATION  reduzir usando a regra 31 (stmt_list)
    '?'          reduzir usando a regra 31 (stmt_list)
    '%'          reduzir usando a regra 31 (stmt_list)
    STRING       reduzir usando a regra 31 (stmt_list)
    ';'          reduzir usando a regra 31 (stmt_list)
    '('          reduzir usando a regra 31 (stmt_list)
    '{'          reduzir usando a regra 31 (stmt_list)
    '}'          reduzir usando a regra 31 (stmt_list)

    stmt_list  ir ao estado 23


Estado 20

   10 fun_decl: TYPE ID '(' ')' block_stmt •

    $end   reduzir usando a regra 10 (fun_decl)
    error  reduzir usando a regra 10 (fun_decl)
    TYPE   reduzir usando a regra 10 (fun_decl)


Estado 21

   11 params: params ',' • param_decl

    TYPE  deslocar, e ir ao estado 14

    param_decl  ir ao estado 24


Estado 22

    9 fun_decl: TYPE ID '(' params ')' • block_stmt

    '{'  deslocar, e ir ao estado 19

    block_stmt  ir ao estado 25


Estado 23

   29 block_stmt: '{' stmt_list • '}'
   30 stmt_list: stmt_list • statement
   32          | stmt_list • error

    error        deslocar, e ir ao estado 26
    ID           deslocar, e ir ao estado 27
    INT          deslocar, e ir ao estado 28
    FLOAT        deslocar, e ir ao estado 29
    NIL          deslocar, e ir ao estado 30
    IF           deslocar, e ir ao estado 31
    FOR          deslocar, e ir ao estado 32
    RETURN       deslocar, e ir ao estado 33
    TYPE         deslocar, e ir ao estado 34
    WRITE        deslocar, e ir ao estado 35
    WRITELN      deslocar, e ir ao estado 36
    READ         deslocar, e ir ao estado 37
    SUM_OP       deslocar, e ir ao estado 38
    EXCLAMATION  deslocar, e ir ao estado 39
    '?'          deslocar, e ir ao estado 40
    '%'          deslocar, e ir ao estado 41
    STRING       deslocar, e ir ao estado 42
    ';'          deslocar, e ir ao estado 43
    '('          deslocar, e ir ao estado 44
    '{'          deslocar, e ir ao estado 134
    '}'          deslocar, e ir ao estado 45

    var_decl       ir ao estado 46
    statement      ir ao estado 47
    for_stmt       ir ao estado 48
    exp_stmt       ir ao estado 49
    exp            ir ao estado 50
    assing_exp     ir ao estado 51
    block_stmt     ir ao estado 52
    if_stmt        ir ao estado 53
    return_stmt    ir ao estado 54
    write_stmt     ir ao estado 55
    writeln_stmt   ir ao estado 56
    read_stmt      ir ao estado 57
    simple_exp     ir ao estado 58
    list_exp       ir ao estado 59
    bin_exp        ir ao estado 60
    unary_log_exp  ir ao estado 61
    rel_exp        ir ao estado 62
    sum_exp        ir ao estado 63
    mul_exp        ir ao estado 64
    factor         ir ao estado 65
    immutable      ir ao estado 66
    call           ir ao estado 67
    constant       ir ao estado 68


Estado 24

   11 params: params ',' param_decl •

    ','  reduzir usando a regra 11 (params)
    ')'  reduzir usando a regra 11 (params)


Estado 25

    9 fun_decl: TYPE ID '(' params ')' block_stmt •

    $end   reduzir usando a regra 9 (fun_decl)
    error  reduzir usando a regra 9 (fun_decl)
    TYPE   reduzir usando a regra 9 (fun_decl)


Estado 26

   32 stmt_list: stmt_list error •

    error        reduzir usando a regra 32 (stmt_list)
    ID           reduzir usando a regra 32 (stmt_list)
    INT          reduzir usando a regra 32 (stmt_list)
    FLOAT        reduzir usando a regra 32 (stmt_list)
    NIL          reduzir usando a regra 32 (stmt_list)
    IF           reduzir usando a regra 32 (stmt_list)
    FOR          reduzir usando a regra 32 (stmt_list)
    RETURN       reduzir usando a regra 32 (stmt_list)
    TYPE         reduzir usando a regra 32 (stmt_list)
    WRITE        reduzir usando a regra 32 (stmt_list)
    WRITELN      reduzir usando a regra 32 (stmt_list)
    READ         reduzir usando a regra 32 (stmt_list)
    SUM_OP       reduzir usando a regra 32 (stmt_list)
    EXCLAMATION  reduzir usando a regra 32 (stmt_list)
    '?'          reduzir usando a regra 32 (stmt_list)
    '%'          reduzir usando a regra 32 (stmt_list)
    STRING       reduzir usando a regra 32 (stmt_list)
    ';'          reduzir usando a regra 32 (stmt_list)
    '('          reduzir usando a regra 32 (stmt_list)
    '{'          reduzir usando a regra 32 (stmt_list)
    '}'          reduzir usando a regra 32 (stmt_list)


Estado 27

   28 assing_exp: ID • ASSIGN simple_exp
   59 factor: ID •
   63 call: ID • '(' args ')'
   64     | ID • '(' ')'
   65     | ID • error

    error   deslocar, e ir ao estado 69
    ASSIGN  deslocar, e ir ao estado 70
    '('     deslocar, e ir ao estado 71

    MUL_OP  reduzir usando a regra 59 (factor)
    SUM_OP  reduzir usando a regra 59 (factor)
    REL_OP  reduzir usando a regra 59 (factor)
    LOG_OP  reduzir usando a regra 59 (factor)
    ':'     reduzir usando a regra 59 (factor)
    MAP     reduzir usando a regra 59 (factor)
    FILTER  reduzir usando a regra 59 (factor)
    ';'     reduzir usando a regra 59 (factor)


Estado 28

   70 constant: INT •

    MUL_OP  reduzir usando a regra 70 (constant)
    SUM_OP  reduzir usando a regra 70 (constant)
    REL_OP  reduzir usando a regra 70 (constant)
    LOG_OP  reduzir usando a regra 70 (constant)
    ':'     reduzir usando a regra 70 (constant)
    MAP     reduzir usando a regra 70 (constant)
    FILTER  reduzir usando a regra 70 (constant)
    ';'     reduzir usando a regra 70 (constant)


Estado 29

   71 constant: FLOAT •

    MUL_OP  reduzir usando a regra 71 (constant)
    SUM_OP  reduzir usando a regra 71 (constant)
    REL_OP  reduzir usando a regra 71 (constant)
    LOG_OP  reduzir usando a regra 71 (constant)
    ':'     reduzir usando a regra 71 (constant)
    MAP     reduzir usando a regra 71 (constant)
    FILTER  reduzir usando a regra 71 (constant)
    ';'     reduzir usando a regra 71 (constant)


Estado 30

   69 constant: NIL •

    MUL_OP  reduzir usando a regra 69 (constant)
    SUM_OP  reduzir usando a regra 69 (constant)
    REL_OP  reduzir usando a regra 69 (constant)
    LOG_OP  reduzir usando a regra 69 (constant)
    ':'     reduzir usando a regra 69 (constant)
    MAP     reduzir usando a regra 69 (constant)
    FILTER  reduzir usando a regra 69 (constant)
    ';'     reduzir usando a regra 69 (constant)


Estado 31

   33 if_stmt: IF • '(' rel_exp ')' statement
   34        | IF • '(' rel_exp ')' statement ELSE statement

    '('  deslocar, e ir ao estado 72


Estado 32

   23 for_stmt: FOR • '(' assing_exp ';' rel_exp ';' assing_exp ')' block_stmt

    '('  deslocar, e ir ao estado 73


Estado 33

   35 return_stmt: RETURN • ';'
   36            | RETURN • exp ';'

    ID           deslocar, e ir ao estado 27
    INT          deslocar, e ir ao estado 28
    FLOAT        deslocar, e ir ao estado 29
    NIL          deslocar, e ir ao estado 30
    SUM_OP       deslocar, e ir ao estado 38
    EXCLAMATION  deslocar, e ir ao estado 39
    '?'          deslocar, e ir ao estado 40
    '%'          deslocar, e ir ao estado 41
    STRING       deslocar, e ir ao estado 42
    ';'          deslocar, e ir ao estado 74
    '('          deslocar, e ir ao estado 44

    exp            ir ao estado 75
    assing_exp     ir ao estado 51
    simple_exp     ir ao estado 58
    list_exp       ir ao estado 59
    bin_exp        ir ao estado 60
    unary_log_exp  ir ao estado 61
    rel_exp        ir ao estado 62
    sum_exp        ir ao estado 63
    mul_exp        ir ao estado 64
    factor         ir ao estado 65
    immutable      ir ao estado 66
    call           ir ao estado 67
    constant       ir ao estado 68


Estado 34

    7 var_decl: TYPE • ID ';'
    8         | TYPE • ID error

    ID  deslocar, e ir ao estado 76


Estado 35

   37 write_stmt: WRITE • '(' simple_exp ')' ';'

    '('  deslocar, e ir ao estado 77


Estado 36

   38 writeln_stmt: WRITELN • '(' simple_exp ')' ';'

    '('  deslocar, e ir ao estado 78


Estado 37

   39 read_stmt: READ • '(' ID ')' ';'

    '('  deslocar, e ir ao estado 79


Estado 38

   57 mul_exp: SUM_OP • factor

    ID      deslocar, e ir ao estado 80
    INT     deslocar, e ir ao estado 135
    FLOAT   deslocar, e ir ao estado 136
    NIL     deslocar, e ir ao estado 137
    STRING  deslocar, e ir ao estado 138
    '('     deslocar, e ir ao estado 139

    factor     ir ao estado 81
    immutable  ir ao estado 140
    call       ir ao estado 141
    constant   ir ao estado 142


Estado 39

   49 unary_log_exp: EXCLAMATION • unary_log_exp

    ID           deslocar, e ir ao estado 80
    INT          deslocar, e ir ao estado 135
    FLOAT        deslocar, e ir ao estado 136
    NIL          deslocar, e ir ao estado 137
    SUM_OP       deslocar, e ir ao estado 38
    EXCLAMATION  deslocar, e ir ao estado 39
    STRING       deslocar, e ir ao estado 138
    '('          deslocar, e ir ao estado 139

    unary_log_exp  ir ao estado 82
    rel_exp        ir ao estado 62
    sum_exp        ir ao estado 63
    mul_exp        ir ao estado 64
    factor         ir ao estado 83
    immutable      ir ao estado 140
    call           ir ao estado 141
    constant       ir ao estado 142


Estado 40

   43 list_exp: '?' • factor
